Fix: Contraste de accesibilidad optimizado según feedback

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,9 +1,8 @@
 @use "../utilities/variables" as *;
 
 body {
-    min-height: 100vh;
-    display: grid;
-    grid-template-rows: auto 1fr auto;
     background-color: $bg-global;
     color: $color-texto;
+    font-weight: 400; 
+    -webkit-font-smoothing: antialiased; 
 }
